--- a/SurveyTool/.settings/org.eclipse.wst.common.component
+++ b/SurveyTool/.settings/org.eclipse.wst.common.component
@@ -5,6 +5,12 @@
         <dependent-module archiveName="mysql-connector-java-5.1.37-bin.jar" deploy-path="/WEB-INF/lib" handle="module:/classpath/lib/ExternalLibs/mysql-connector-java-5.1.37-bin.jar">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="DatabaseMgr.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/DatabaseMgr/DatabaseMgr">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="servlet-api.jar" deploy-path="/WEB-INF/lib" handle="module:/classpath/lib/ExternalLibs/servlet-api.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="java-output-path" value="/SurveyTool/build/classes"/>
         <property name="context-root" value="SurveyTool"/>
     </wb-module>
