--- a/SurveyTool/WebContent/css/style.css
+++ b/SurveyTool/WebContent/css/style.css
@@ -95,6 +95,7 @@ h1 span{font-size: 0.6em;
 .body-content {margin:10px 10px;}
 .title-content {border-bottom: 1px solid #eee;
 	padding-bottom: 20px;}
+.title-content-no-underline {padding-bottom: 20px;}
 .content {margin: 10px 30px 0px 30px;}
 .row-menu {width: 70%;
 	left: 15%;
